# streamlit-apprunner

./: .gitignore  Dockerfile  DockerfileApp  Makefile  docker-compose.yml  main.py  pyproject.toml  test.py  train.py
