[tool.poetry]
name = "streamlit-apprunner"
version = "0.1.0"
description = ""
authors = ["nara-ryoya <nara_ryoya@icloud.com>"]
readme = "README.md"
packages = [{include = "streamlit_apprunner"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.22.0"
torch = "^2.0.0"
torchvision = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
