[tool.poetry]
name = "streamlit-apprunner"
version = "0.1.0"
description = ""
authors = ["nara-ryoya <nara_ryoya@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
torch = {path = "./.torch_wheels/torch-2.0.0-cp310-cp310-manylinux1_x86_64.whl"}
torchvision = {path = "./.torch_wheels/torchvision-0.15.1-cp310-cp310-manylinux1_x86_64.whl"}
streamlit = "^1.22.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
